tests/NormalTests/paczka1/fuzzy1/88201240.err
Error in line 8: JI7RSVPD A250 72,5
Error in line 19: QtOqH1 A250 55,6
Error in line 27: JI7RSVPD S879 237,3
Error in line 26: QvL A250 55,5
